# todo-frontend

./: Cargo.toml  index.html  tailwind.config.js  tailwind.css
src/: main.rs
src/components/task/: form.rs  mod.rs  task.rs  tasklist.rs
src/models/: task.rs
